force-app/main/default/objects/Paper_Download__c/Paper_Download__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Paper_Download_Compact_Layout</compactLayoutAssignment>
    <label>Paper Download</label>
    <nameField>
        <displayFormat>DL-{000000}</displayFormat>
        <label>Paper Download Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paper Downloads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>