force-app/main/default/objects/Paper_Download__c/fields/Agency_Size_formula__c.field-meta.xml
<CustomField>
    <fullName>Agency_Size_formula__c</fullName>
    <description
  >Displays the Demo Agency / Institution Size field on the Paper Download object records.</description>
    <formula>TEXT(Registrant__r.Agency_Institution_Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Displays the Demo Agency / Institution Size field on the Paper Download object records.</inlineHelpText>
    <label>Agency Size</label>
    <type>Text</type>
</CustomField>