force-app/main/default/objects/Paper_Download__c/fields/Detail_1__c.field-meta.xml
<CustomField>
    <fullName>Detail_1__c</fullName>
    <description
  >Paper Download Detail - Provide additional details about the paper download such as answers to a custom question on the form.</description>
    <inlineHelpText
  >Paper Download Detail - Provide additional details about the paper download such as answers to a custom question on the form.</inlineHelpText>
    <label>Detail 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>