force-app/main/default/objects/Paper_Download__c/fields/Download_Date__c.field-meta.xml
<CustomField>
    <fullName>Download_Date__c</fullName>
    <description>The date this customer downloaded this asset.</description>
    <inlineHelpText
  >The date this customer downloaded this asset.</inlineHelpText>
    <label>Download Date</label>
    <type>Date</type>
</CustomField>