force-app/main/default/objects/Paper_Download__c/fields/Non_Qual__c.field-meta.xml
<CustomField>
    <fullName>Non_Qual__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates that this download is not qualified to be delivered as a lead.</description>
    <inlineHelpText
  >Indicates that this download is not qualified to be delivered as a lead.</inlineHelpText>
    <label>Non-Qual</label>
    <type>Checkbox</type>
</CustomField>