force-app/main/default/objects/Paper_Download__c/fields/Paper__c.field-meta.xml
<CustomField>
    <fullName>Paper__c</fullName>
    <description>Indicates which paper or asset was downloaded.</description>
    <inlineHelpText
  >Indicates which paper or asset was downloaded.</inlineHelpText>
    <label>Paper</label>
    <referenceTo>Paper__c</referenceTo>
    <relationshipLabel>Paper Downloads</relationshipLabel>
    <relationshipName>Paper_Downloads</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>