force-app/main/default/objects/Paper_Download__c/fields/Paper_Contact_Interest_Topics__c.field-meta.xml
<CustomField>
    <fullName>Paper_Contact_Interest_Topics__c</fullName>
    <inlineHelpText
  >Contact Interest Topics from the Paper at the time of the download.</inlineHelpText>
    <label>Paper Contact Interest Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Interest_Topics</valueSetName>
    </valueSet>
</CustomField>