force-app/main/default/objects/Paper_Download__c/fields/Paper_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>Paper_ID_Formula__c</fullName>
    <formula>Paper__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paper ID (Formula)</label>
    <type>Text</type>
</CustomField>