force-app/main/default/objects/Paper_Download__c/fields/Paper_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Paper_Name_Formula__c</fullName>
    <formula>Paper__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paper Name (Formula)</label>
    <type>Text</type>
</CustomField>