force-app/main/default/objects/Paper_Download__c/fields/Privacy_Status_Evaluation_Period__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Status_Evaluation_Period__c</fullName>
    <description
  >If the Download Date is greater than the Privacy Status Date OR if the Download Date falls within the last 365 days of the Privacy Status Date.</description>
    <formula>OR(
  Download_Date__c &gt; Registrant__r.Privacy_Status_Date__c,
  AND(
    0 &lt;= (Registrant__r.Privacy_Status_Date__c - Download_Date__c),
    (Registrant__r.Privacy_Status_Date__c - Download_Date__c) &lt;= 365
  )
)</formula>
    <inlineHelpText
  >If the Download Date is greater than the Privacy Status Date OR if the Download Date falls within the last 365 days of the Privacy Status Date.</inlineHelpText>
    <label>Privacy Status Evaluation Period</label>
    <type>Checkbox</type>
</CustomField>