force-app/main/default/objects/Paper_Download__c/fields/Push_Download_to_CMS__c.field-meta.xml
<CustomField>
    <fullName>Push_Download_to_CMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checking this box will initiate a trigger that will push the paper download to the CMS.</description>
    <inlineHelpText
  >Checking this box will initiate a trigger that will push the paper download to the CMS.</inlineHelpText>
    <label>Push Download to CMS</label>
    <type>Checkbox</type>
</CustomField>