force-app/main/default/objects/Paper_Download__c/fields/Registrant__c.field-meta.xml
<CustomField>
    <fullName>Registrant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Contact record for the person that downloaded the paper.</description>
    <inlineHelpText
  >Contact record for the person that downloaded the paper.</inlineHelpText>
    <label>Registrant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Paper Downloads</relationshipLabel>
    <relationshipName>Paper_Downloads</relationshipName>
    <type>Lookup</type>
</CustomField>