force-app/main/default/objects/Paper_Download__c/fields/Registrant_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Account_Id__c</fullName>
    <description>Formula to pull the registrant&apos;s Account Id.</description>
    <formula>Registrant__r.AccountId</formula>
    <label>Registrant Account Id</label>
    <type>Text</type>
</CustomField>