force-app/main/default/objects/Paper_Download__c/fields/Registrant_Account_Nav_Id__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Account_Nav_Id__c</fullName>
    <formula>Registrant__r.Navigator_Account_Id__c</formula>
    <label>Registrant Account Nav Id</label>
    <type>Text</type>
</CustomField>