force-app/main/default/objects/Paper_Download__c/fields/Registrant_Account_Nav_Jurisdiction_Id__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Account_Nav_Jurisdiction_Id__c</fullName>
    <formula>Registrant__r.Navigator_Jurisdiction_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant Account Nav Jurisdiction Id</label>
    <type>Text</type>
</CustomField>