force-app/main/default/objects/Paper_Download__c/fields/Registrant_City__c.field-meta.xml
<CustomField>
    <fullName>Registrant_City__c</fullName>
    <formula>Registrant__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant City</label>
    <type>Text</type>
</CustomField>