force-app/main/default/objects/Paper_Download__c/fields/Registrant_Company__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Company__c</fullName>
    <formula>Registrant__r.Company_Name_Holder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant Company</label>
    <type>Text</type>
</CustomField>