force-app/main/default/objects/Paper_Download__c/fields/Registrant_Demo_Agency_Function__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Demo_Agency_Function__c</fullName>
    <formula>TEXT(Registrant__r.Demo_Agency_Function__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant Demo Agency Function</label>
    <type>Text</type>
</CustomField>