force-app/main/default/objects/Paper_Download__c/fields/Registrant_Demo_Branch_of_Govt__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Demo_Branch_of_Govt__c</fullName>
    <formula>TEXT(Registrant__r.Demo_Branch_of_Govt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant Demo Branch of Govt</label>
    <type>Text</type>
</CustomField>