force-app/main/default/objects/Paper_Download__c/fields/Registrant_Demo_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Demo_Job_Role__c</fullName>
    <formula>TEXT( Registrant__r.Demo_Job_Role__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant Demo Job Role</label>
    <type>Text</type>
</CustomField>