force-app/main/default/objects/Paper_Download__c/fields/Registrant_Email__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Email__c</fullName>
    <formula>Registrant__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant Email</label>
    <type>Text</type>
</CustomField>