force-app/main/default/objects/Paper_Download__c/fields/Registrant_Reader_Number__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Reader_Number__c</fullName>
    <formula>Registrant__r.Reader_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant Reader Number</label>
    <type>Text</type>
</CustomField>