force-app/main/default/objects/Paper_Download__c/fields/Registrant_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Record_Type__c</fullName>
    <formula
  >IF(Registrant__r.RecordTypeId=&quot;012300000008caM&quot;, &quot;Public Sector&quot;,
IF(Registrant__r.RecordTypeId=&quot;012300000008caR&quot;, &quot;Private Sector&quot;,
&quot;Other&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant Record Type</label>
    <type>Text</type>
</CustomField>