force-app/main/default/objects/Paper_Download__c/fields/Registrant_State__c.field-meta.xml
<CustomField>
    <fullName>Registrant_State__c</fullName>
    <formula>Registrant__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant State</label>
    <type>Text</type>
</CustomField>