force-app/main/default/objects/Paper_Download__c/fields/Registrant_Title__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Title__c</fullName>
    <formula>Registrant__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant Title</label>
    <type>Text</type>
</CustomField>