force-app/main/default/objects/Paper_Download__c/fields/Sponsor_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Yes, I would like some additional information from the sponsor.</description>
    <inlineHelpText
  >Yes, I would like some additional information from the sponsor.</inlineHelpText>
    <label>Sponsor Opt-In</label>
    <type>Checkbox</type>
</CustomField>