force-app/main/default/objects/Paper_Download__c/fields/Survey_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Survey_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checkbox on paper survey question &quot;Check here if you plan to purchase products or solutions for this topic.&quot;</description>
    <label>Plan to Purchase</label>
    <type>Checkbox</type>
</CustomField>