force-app/main/default/objects/Paper_Download__c/fields/Survey_Comment__c.field-meta.xml
<CustomField>
    <fullName>Survey_Comment__c</fullName>
    <description
  >Answer to the survey question: &apos;Why did you choose this paper? Are you just learning about this topic, conducting research for an upcoming project, putting together an RFP, etc?&apos;</description>
    <label>Reason for Download</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>