force-app/main/default/objects/Paper_Download__c/fields/TM_Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>TM_Call_Duration__c</fullName>
    <label>TM Call Duration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>