force-app/main/default/objects/Paper_Download__c/fields/TM_Dialer_ID__c.field-meta.xml
<CustomField>
    <fullName>TM_Dialer_ID__c</fullName>
    <description>The ID of the telemarketing transaction.</description>
    <inlineHelpText>The ID of the telemarketing transaction.</inlineHelpText>
    <label>TM Dialer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>