force-app/main/default/objects/Paper_Download__c/fields/TM_Spoke_to_Title__c.field-meta.xml
<CustomField>
    <fullName>TM_Spoke_to_Title__c</fullName>
    <description
  >The title of the person the telemarketing rep spoke to.</description>
    <inlineHelpText
  >The title of the person the telemarketing rep spoke to.</inlineHelpText>
    <label>TM Spoke to Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>