force-app/main/default/objects/Paper_Download__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Transaction Id from OneForm submission.</description>
    <inlineHelpText>Transaction Id from OneForm submission.</inlineHelpText>
    <label>Transaction ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>