force-app/main/default/objects/Paper_Download__c/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <description>Source of this record from our websites.</description>
    <inlineHelpText>Source of this record from our websites.</inlineHelpText>
    <label>Web Source</label>
    <type>Url</type>
</CustomField>