force-app/main/default/objects/Paper_Download__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Download_Date__c</columns>
    <columns>Paper__c</columns>
    <columns>Registrant__c</columns>
    <columns>Registrant_Company__c</columns>
    <columns>Registrant_Title__c</columns>
    <columns>Registrant_Email__c</columns>
    <columns>Promo_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>