force-app/main/default/objects/Paper_Download__c/listViews/Downloads_of_This_Paper.listView-meta.xml
<ListView>
    <fullName>Downloads_of_This_Paper</fullName>
    <columns>NAME</columns>
    <columns>Download_Date__c</columns>
    <columns>Registrant__c</columns>
    <columns>Registrant_Title__c</columns>
    <columns>Registrant_Company__c</columns>
    <columns>Registrant_Email__c</columns>
    <columns>Non_Qual__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Promo_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>Downloads of This Paper</label>
</ListView>