force-app/main/default/objects/Paper_Download__c/listViews/HubSpot_Paper_Downloads_View_Anthony.listView-meta.xml
<ListView>
    <fullName>HubSpot_Paper_Downloads_View_Anthony</fullName>
    <columns>Non_Qual__c</columns>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Download_Date__c</columns>
    <columns>Registrant__c</columns>
    <columns>Registrant_Company__c</columns>
    <columns>Registrant_Title__c</columns>
    <columns>Registrant_Email__c</columns>
    <columns>Detail_1__c</columns>
    <columns>Promo_Code__c</columns>
    <columns>Registrant_City__c</columns>
    <columns>Push_Download_to_CMS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Non_Qual__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Promo_Code__c</field>
        <operation>equals</operation>
        <value>gt_paper_email_240321</value>
    </filters>
    <label>HubSpot Paper Downloads View - Anthony</label>
</ListView>