force-app/main/default/objects/Paper_Download__c/listViews/Standard_Paper_Downloads_View_Kirsten.listView-meta.xml
<ListView>
    <fullName>Standard_Paper_Downloads_View_Kirsten</fullName>
    <columns>Non_Qual__c</columns>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Download_Date__c</columns>
    <columns>Registrant__c</columns>
    <columns>Registrant_Company__c</columns>
    <columns>Registrant_Title__c</columns>
    <columns>Registrant_Email__c</columns>
    <columns>Registrant_State__c</columns>
    <columns>Promo_Code__c</columns>
    <columns>Paper_Name_Formula__c</columns>
    <columns>Registrant_Demo_Job_Function__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Non_Qual__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Paper_Name_Formula__c</field>
        <operation>equals</operation>
        <value>GT - Quorum Analytics - TLP - 250929</value>
    </filters>
    <label>Standard Paper Downloads View - Kirsten</label>
</ListView>