force-app/main/default/objects/Paper_Download__c/listViews/Standard_Paper_Downloads_View_Trecia.listView-meta.xml
<ListView>
    <fullName>Standard_Paper_Downloads_View_Trecia</fullName>
    <columns>Non_Qual__c</columns>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Download_Date__c</columns>
    <columns>Registrant__c</columns>
    <columns>Registrant_Company__c</columns>
    <columns>Registrant_Title__c</columns>
    <columns>Registrant_Email__c</columns>
    <columns>Detail_1__c</columns>
    <columns>Detail_2__c</columns>
    <columns>Promo_Code__c</columns>
    <columns>Push_Download_to_CMS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Paper__c</field>
        <operation>equals</operation>
        <value
    >GT - Action1 - Supplied - 250910 - Software Vulnerability Report</value>
    </filters>
    <filters>
        <field>Non_Qual__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Standard Paper Downloads View - Trecia</label>
</ListView>